--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: python
 
+env:
+  global:
+  - OPENSSL=1.1.0h
+
 matrix:
   include:
     - os: linux
@@ -10,5 +14,8 @@ before_install:
   - ls
   - |
   # clang complains about unused-parameter a lot, redirect stderr
+  python3 Tools/ssl/multissltests.py --steps=library \
+    --base-directory ${HOME}/multissl \
+    --openssl ${OPENSSL} >/dev/null 2>&1
   - openssl version
   
