--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,5 @@ before_install:
   - wget https://raw.githubusercontent.com/python/cpython/master/Tools/ssl/multissltests.py
   - ls
   - |
-     python3 Tools/ssl/multissltests.py --steps=library \
-         --base-directory ${HOME}/multissl \
-         --openssl ${OPENSSL} >/dev/null 2>&1
+     python3 multissltests.py
 
