--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,38 @@
-dist: trusty
-sudo: false
 language: python
+cache:
+  directories:
+    - $HOME/.pyenv_cache
+    - $HOME/.cache/pip
 
 matrix:
   include:
-  - name: "Linux: Python 3.7"
-    os: "linux"
-    env:
-     - "PYENV_VERSION=3.7.0"
-  - name: "Linux: Python 3.7"
-    os: "linux"
-    env:
-     - "PYENV_VERSION=3.7.0"
-    dist: xenial
-    sudo: true
-    
+    - name: "Linux: Python 3.7"
+      os: "linux"
+      env:
+        - "PYENV_VERSION=3.7.0"
+
+    - name: "Linux: Python 3.7"
+      os: "linux"
+      dist: xenial
+      sudo: true
+      env:
+        - "PYENV_VERSION=3.7.0"
+
+env:
+  global:
+    - PYENV_ROOT="$HOME/.pyenv"
+    - PATH="$PYENV_ROOT/bin:$PATH"
+    - PYTHON_BUILD_CACHE_PATH=$HOME/.pyenv_cache
+    - TOXENV=py
+
+
+
 install:
   - git clone https://github.com/pyenv/pyenv.git $HOME/.pyenv
   - eval "$(pyenv init -)"
   - pyenv install $PYENV_VERSION
   - pyenv global $PYENV_VERSION
   - python --version
-    
+
 script:
-    - openssl version
+  - tox
