--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
 language: python
-sudo: true
-dist: xenial
-
 cache:
   directories:
     - $HOME/.pyenv_cache
@@ -9,10 +6,67 @@ cache:
 
 matrix:
   include:
-    - name: "Linux: Python 3.7"
+    - name: "Linux: Python 2.7"
       os: "linux"
       env:
+        - "PYENV_VERSION=2.7.15"
+
+    - name: "Linux: Python 3.5"
+      os: "linux"
+      env:
+        - "PYENV_VERSION=3.5.6"
+
+    - name: "Linux: Python 3.6"
+      os: "linux"
+      env:
+        - "PYENV_VERSION=3.6.6"
+
+    - name: "Linux: Python 3.7"
+      os: "linux"
+      dist: "xenial"
+      sudo: "true"
+      env:
         - "PYENV_VERSION=3.7.0"
+
+    - name: "Linux: Python 3.8-dev"
+      os: "linux"
+      dist: "xenial"
+      sudo: "true"
+      env:
+        - "PYENV_VERSION=3.8-dev"
+        - "REQUIRE_SSL=true"
+
+    - name: "OSX: Python 2.7"
+      os: "osx"
+      env:
+        - "PYENV_VERSION=2.7.15"
+
+    - name: "OSX: Python 3.5"
+      os: "osx"
+      env:
+        - "PYENV_VERSION=3.5.6"
+
+    - name: "OSX: Python 3.6"
+      os: "osx"
+      env:
+        - "PYENV_VERSION=3.6.6"
+
+    - name: "OSX: Python 3.7"
+      os: "osx"
+      env:
+        - "PYENV_VERSION=3.7.0"
+        - "REQUIRE_SSL=true"
+
+    - name: "OSX: Python 3.8-dev"
+      os: "osx"
+      env:
+        - "PYENV_VERSION=3.8-dev"
+        - "REQUIRE_SSL=true"
+
+    allow_failures:
+     - name:
+         - "Linux: Python 3.8-dev"
+         - "OSX: Python 3.8-dev"
 
 env:
   global:
@@ -22,9 +76,14 @@ env:
     - TOXENV=py
 
 
-
 install:
-  - openssl version
+  - |
+    if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+      if [[ $REQUIRE_SSL == 'true' ]]; then
+        brew update
+        brew upgrade openssl
+      fi
+    fi
   - git clone https://github.com/pyenv/pyenv.git $HOME/.pyenv
   - eval "$(pyenv init -)"
   - pyenv install $PYENV_VERSION
@@ -32,4 +91,4 @@ install:
   - python --version
 
 script:
-  - ls
+  - tox
