--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: python
+language: generic
 cache:
   directories:
     - $HOME/.pyenv_cache
@@ -6,72 +6,67 @@ cache:
 
 matrix:
   include:
-    - name: "Linux: Python 2.7"
-      os: "linux"
-      env:
-        - "PYENV_VERSION=2.7.15"
+#     - name: "Linux: Python 2.7"
+#       os: "linux"
+#       env:
+#         - "PYENV_VERSION=2.7.15"
 
-    - name: "Linux: Python 3.5"
-      os: "linux"
-      env:
-        - "PYENV_VERSION=3.5.6"
+#     - name: "Linux: Python 3.5"
+#       os: "linux"
+#       env:
+#         - "PYENV_VERSION=3.5.6"
 
-    - name: "Linux: Python 3.6"
-      os: "linux"
-      env:
-        - "PYENV_VERSION=3.6.6"
+#     - name: "Linux: Python 3.6"
+#       os: "linux"
+#       env:
+#         - "PYENV_VERSION=3.6.6"
 
-    - name: "Linux: Python 3.7"
-      os: "linux"
-      dist: "xenial"
-      sudo: "true"
-      env:
-        - "PYENV_VERSION=3.7.0"
+#     - name: "Linux: Python 3.7"
+#       os: "linux"
+#       dist: "xenial"
+#       sudo: "true"
+#       env:
+#         - "PYENV_VERSION=3.7.0"
 
     - name: "Linux: Python 3.8-dev"
-      os: "linux"
-      dist: "xenial"
+#       os: "linux"
+#       dist: "xenial"
       sudo: "true"
       env:
         - "PYENV_VERSION=3.8-dev"
         - "REQUIRE_SSL=true"
 
-    - name: "OSX: Python 2.7"
-      language: "generic"
-      os: "osx"
-      env:
-        - "PYENV_VERSION=2.7.15"
+#     - name: "OSX: Python 2.7"
+#       os: "osx"
+#       env:
+#         - "PYENV_VERSION=2.7.15"
 
-    - name: "OSX: Python 3.5"
-      language: "generic"
-      os: "osx"
-      env:
-        - "PYENV_VERSION=3.5.6"
+#     - name: "OSX: Python 3.5"
+#       os: "osx"
+#       env:
+#         - "PYENV_VERSION=3.5.6"
 
-    - name: "OSX: Python 3.6"
-      language: "generic"
-      os: "osx"
-      env:
-        - "PYENV_VERSION=3.6.6"
+#     - name: "OSX: Python 3.6"
+#       os: "osx"
+#       env:
+#         - "PYENV_VERSION=3.6.6"
 
-    - name: "OSX: Python 3.7"
-      language: "generic"
-      os: "osx"
-      env:
-        - "PYENV_VERSION=3.7.0"
-        - "REQUIRE_SSL=true"
+#     - name: "OSX: Python 3.7"
+#       os: "osx"
+#       env:
+#         - "PYENV_VERSION=3.7.0"
+#         - "REQUIRE_SSL=true"
 
     - name: "OSX: Python 3.8-dev"
-      language: "generic"
       os: "osx"
       env:
         - "PYENV_VERSION=3.8-dev"
         - "REQUIRE_SSL=true"
 
-allow_failures:
-  - name:
-    - "Linux: Python 3.8-dev"
-    - "OSX: Python 3.8-dev"
+# allow_failures:
+#   - name:
+#     - "Linux: Python 3.8-dev"
+#     - "OSX: Python 3.8-dev"
 
 env:
   global:
@@ -84,7 +79,7 @@ env:
 install:
   - |
     if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
-      if [[ $REQUIRE_SSL == 'true' ]]; then
+      if [[ $REQUIRE_SSL == 'false' ]]; then
         brew update
         brew upgrade openssl
       fi
